[gd_scene load_steps=41 format=3 uid="uid://cg0dpkfqho8xs"]

[ext_resource type="Script" path="res://Scripts/CEF.gd" id="1_j4gvw"]
[ext_resource type="Shader" path="res://Shaders/test.gdshader" id="1_of60d"]
[ext_resource type="Shader" path="res://Shaders/Blur.gdshader" id="2_qqkxj"]
[ext_resource type="PackedScene" uid="uid://bwb4tc71spc0u" path="res://Scenes/mario_viewport.tscn" id="3_18r71"]
[ext_resource type="PackedScene" uid="uid://scu3pvp6we0w" path="res://Scenes/TabsOverlay.tscn" id="3_fpfdj"]
[ext_resource type="PackedScene" uid="uid://35gx22cp3up" path="res://Scenes/settings.tscn" id="5_11a38"]
[ext_resource type="PackedScene" uid="uid://bqc4y2g8862jh" path="res://Scenes/SearchBar.tscn" id="5_i6ar6"]
[ext_resource type="Shader" path="res://Shaders/wind.gdshader" id="5_j6ru3"]
[ext_resource type="Shader" path="res://Shaders/BloodLossFeverBullshit.gdshader" id="6_6nit7"]
[ext_resource type="PackedScene" uid="uid://d4gt87w0qay0d" path="res://Scenes/WelcomeScreen.tscn" id="6_hu3nc"]
[ext_resource type="PackedScene" uid="uid://cir8rv3babeax" path="res://Scenes/InfoScreen.tscn" id="6_lvtfn"]
[ext_resource type="Shader" path="res://Shaders/test3.gdshader" id="7_tdbtu"]
[ext_resource type="Script" path="res://Scripts/Camera.gd" id="9_0xrsy"]
[ext_resource type="Texture2D" uid="uid://c0ko5hxqfsxgj" path="res://Assets/icons/arrow_back_ios_new_24dp_E8EAED_FILL0_wght400_GRAD0_opsz24.png" id="13_f8ulr"]
[ext_resource type="Script" path="res://Scripts/handles.gd" id="13_krsn5"]
[ext_resource type="Script" path="res://Scripts/topbar.gd" id="13_sdjgq"]
[ext_resource type="Texture2D" uid="uid://b06hrau5cqoj" path="res://Assets/icons/arrow_forward_ios_24dp_E8EAED_FILL0_wght400_GRAD0_opsz24.png" id="14_btxsc"]
[ext_resource type="Texture2D" uid="uid://cau0strouyjwo" path="res://Assets/icons/refresh_24dp_E8EAED_FILL0_wght400_GRAD0_opsz24.png" id="15_scxih"]
[ext_resource type="Texture2D" uid="uid://davfafbioopix" path="res://Assets/icons/minimize_24dp_E8EAED_FILL0_wght400_GRAD0_opsz24.png" id="16_oat6h"]
[ext_resource type="Texture2D" uid="uid://cfobql4730dct" path="res://Assets/icons/search_24dp_E8EAED_FILL0_wght400_GRAD0_opsz24.png" id="17_gm15y"]
[ext_resource type="Texture2D" uid="uid://c2r2y0qd1ikls" path="res://Assets/icons/maximize_24dp_E8EAED_FILL0_wght400_GRAD0_opsz24.png" id="17_k77ib"]
[ext_resource type="Texture2D" uid="uid://bkwdh6wpwwt5a" path="res://Assets/icons/close_24dp_E8EAED_FILL0_wght400_GRAD0_opsz24.png" id="18_8jv3j"]
[ext_resource type="Texture2D" uid="uid://d36b8164sa5y5" path="res://Assets/icons/tabs_24dp_E8EAED_FILL0_wght400_GRAD0_opsz24.png" id="18_rf78i"]
[ext_resource type="Texture2D" uid="uid://eqy22pmfmcws" path="res://Assets/icons/info_24dp_E8EAED_FILL0_wght400_GRAD0_opsz24.png" id="19_017ix"]
[ext_resource type="Texture2D" uid="uid://dgdorywxiv65k" path="res://Assets/icons/settings_24dp_E8EAED_FILL0_wght400_GRAD0_opsz24.png" id="20_jb74c"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4k6bj"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gxtfe"]
shader = ExtResource("2_qqkxj")
shader_parameter/exclude_center = null
shader_parameter/exclude_size = null
shader_parameter/lod = 1.5

[sub_resource type="Environment" id="Environment_uw372"]
background_mode = 3
glow_enabled = true
glow_strength = 0.49
glow_blend_mode = 1

[sub_resource type="Shader" id="Shader_jg38n"]
code = "shader_type canvas_item;

#define iResolution 1.0/SCREEN_PIXEL_SIZE
#define iTime TIME

uniform sampler2D iChannel0;
uniform float strength = 1.0;
uniform float speed = 1.0;
uniform vec2 disp = vec2(1.0, 1.0);


vec2 GetGradient(vec2 intPos, float t) {
    
    // Uncomment for calculated rand
    //float rand = fract(sin(dot(intPos, vec2(12.9898, 78.233))) * 43758.5453);;
    
    // Texture-based rand (a bit faster on my GPU)
    float rand = texture(iChannel0, intPos / 64.0).r;
    
    // Rotate gradient: random starting rotation, random rotation rate
    float angle = 6.283185 * rand + 4.0 * t * rand;
    return vec2(cos(angle), sin(angle));
}


float Pseudo3dNoise(vec3 pos) {
    vec2 i = floor(pos.xy);
    vec2 f = pos.xy - i;
    vec2 blend = f * f * (3.0 - 2.0 * f);
    float noiseVal = 
        mix(
            mix(
                dot(GetGradient(i + vec2(0, 0), pos.z), f - vec2(0, 0)),
                dot(GetGradient(i + vec2(1, 0), pos.z), f - vec2(1, 0)),
                blend.x),
            mix(
                dot(GetGradient(i + vec2(0, 1), pos.z), f - vec2(0, 1)),
                dot(GetGradient(i + vec2(1, 1), pos.z), f - vec2(1, 1)),
                blend.x),
        blend.y
    );
    return noiseVal / 0.7; // normalize to about [-1..1]
}


void fragment() { 
	float ratio = SCREEN_PIXEL_SIZE.x / SCREEN_PIXEL_SIZE.y;
	vec2 noise_uv = UV / vec2(ratio, 1.0);
    float noiseVal = 0.5 + 0.5 * Pseudo3dNoise(vec3(noise_uv * 10.0 * strength, iTime * speed));
    
    vec2 uv = UV;
    float noiseWeight = 0.05;
    uv.x += noiseVal * noiseWeight * disp.x;
    uv.y += noiseVal * noiseWeight * disp.y;
    vec3 col = texture(iChannel0,uv).rgb;
    
    COLOR.rgb = vec3(col);
    
}"

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_nw78w"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kp26g"]
shader = SubResource("Shader_jg38n")
shader_parameter/strength = 1.0
shader_parameter/speed = 1.0
shader_parameter/disp = Vector2(200, 100)
shader_parameter/iChannel0 = SubResource("NoiseTexture2D_nw78w")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_q4nje"]
shader = ExtResource("5_j6ru3")
shader_parameter/angle = -0.125
shader_parameter/position = -0.195
shader_parameter/spread = 0.565
shader_parameter/cutoff = 0.15
shader_parameter/falloff = 0.12
shader_parameter/edge_fade = 0.185
shader_parameter/speed = 13.821
shader_parameter/ray1_density = 8.0
shader_parameter/ray2_density = 30.0
shader_parameter/ray2_intensity = 0.17
shader_parameter/color = Color(1, 0.9, 0.65, 0.3)
shader_parameter/hdr = true
shader_parameter/seed = 5.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7khm3"]
shader = ExtResource("7_tdbtu")
shader_parameter/crack_depth = 2.236
shader_parameter/crack_scale = 4.0
shader_parameter/crack_zebra_scale = 2.67
shader_parameter/crack_zebra_amp = 1.3
shader_parameter/crack_profile = 1.0
shader_parameter/crack_slope = 45.8
shader_parameter/crack_width = 0.001
shader_parameter/refraction_offset = Vector2(0, 0)
shader_parameter/reflection_offset = Vector2(1, 1)
shader_parameter/reflection_color = Color(0, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_41mvn"]
shader = ExtResource("6_6nit7")
shader_parameter/bits_per_channel = 8.0
shader_parameter/dither_strength = 0.114
shader_parameter/bloom_threshold = 1.0
shader_parameter/bloom_intensity = 10.0
shader_parameter/initial_pixelation = 2000.0
shader_parameter/color_relaxation = 0.0
shader_parameter/relaxation_color = Vector3(1, 1, 1)
shader_parameter/threshold_r = 0.5
shader_parameter/threshold_g = 0.5
shader_parameter/threshold_b = 0.5
shader_parameter/threshold_color = Vector3(1, 1, 1)

[sub_resource type="Gradient" id="Gradient_0tigl"]
colors = PackedColorArray(0.961188, 5.77569e-07, 0.503543, 1, 0, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_1gra4"]
gradient = SubResource("Gradient_0tigl")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ulghg"]
shader = ExtResource("1_of60d")
shader_parameter/size_effect = 0.1
shader_parameter/speed = 2.625
shader_parameter/highlight_strength = 0.5
shader_parameter/color_mode_toggle = false
shader_parameter/is_horizontal = false
shader_parameter/color_gradient = SubResource("GradientTexture1D_1gra4")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5m52f"]
content_margin_left = 7.0
content_margin_top = 2.0
content_margin_right = 7.0
content_margin_bottom = 2.0
bg_color = Color(4.96348e-08, 0.0453483, 0.0453482, 1)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_aet8x"]
color = Color(1, 1, 1, 1)
vertical = true

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2rfkf"]

[node name="GUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_j4gvw")

[node name="CEF" type="GDCef" parent="."]

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 34.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4k6bj")

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Panel/VBox"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 0
expand_mode = 1
stretch_mode = 3

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="AcceptDialog" type="AcceptDialog" parent="."]

[node name="BlurOverlay" type="ColorRect" parent="."]
visible = false
z_index = 1
material = SubResource("ShaderMaterial_gxtfe")
layout_mode = 0
offset_top = 34.0
offset_right = 1148.0
offset_bottom = 654.0

[node name="ColorOverlay" type="ColorRect" parent="BlurOverlay"]
layout_mode = 0
offset_right = 1156.0
offset_bottom = 654.0
color = Color(0, 0, 0, 0.498039)

[node name="SubViewportContainer" parent="." instance=ExtResource("3_18r71")]
layout_mode = 0
offset_top = 34.0
offset_bottom = 649.0
mouse_filter = 2

[node name="TabsOverlay" parent="." instance=ExtResource("3_fpfdj")]
visible = false
z_index = 1
layout_mode = 0
offset_top = 54.0
offset_right = 1169.0
offset_bottom = 653.0

[node name="SearchBar" parent="." instance=ExtResource("5_i6ar6")]
visible = false
z_index = 1
offset_left = 337.0
offset_top = 271.0
offset_right = 840.0
offset_bottom = 340.0

[node name="Settings" parent="." instance=ExtResource("5_11a38")]
visible = false
z_index = 1

[node name="InfoScreen" parent="." instance=ExtResource("6_lvtfn")]
visible = false
z_index = 1

[node name="WelcomeScreen" parent="." instance=ExtResource("6_hu3nc")]
visible = false
z_index = 1

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_uw372")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
material = SubResource("ShaderMaterial_kp26g")
layout_mode = 0
offset_right = 1152.0
offset_bottom = 647.0
mouse_filter = 2

[node name="CanvasLayer3" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer3"]
material = SubResource("ShaderMaterial_q4nje")
offset_right = 1154.0
offset_bottom = 650.0
mouse_filter = 2

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="CanvasLayer2"]
material = SubResource("ShaderMaterial_7khm3")
offset_right = 1152.0
offset_bottom = 648.0
mouse_filter = 2

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="FeverDream" type="ColorRect" parent="CanvasLayer"]
visible = false
material = SubResource("ShaderMaterial_41mvn")
offset_right = 1152.0
offset_bottom = 648.0
mouse_filter = 2

[node name="RandomAssHighlight" type="ColorRect" parent="CanvasLayer"]
visible = false
material = SubResource("ShaderMaterial_ulghg")
offset_right = 1152.0
offset_bottom = 648.0
mouse_filter = 2

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(576, 324)
script = ExtResource("9_0xrsy")

[node name="FileDialog" type="FileDialog" parent="."]
title = "Save HTML contents of webpage"
initial_position = 1
size = Vector2i(480, 345)
dialog_hide_on_ok = true
access = 2
use_native_dialog = true

[node name="layout" type="VBoxContainer" parent="."]
z_index = -3
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 54.0
grow_horizontal = 2
theme_override_constants/separation = 0

[node name="topbar" type="PanelContainer" parent="layout"]
z_index = -1
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_5m52f")
script = ExtResource("13_sdjgq")

[node name="HBoxContainer" type="HBoxContainer" parent="layout/topbar"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 7

[node name="backward" type="TextureButton" parent="layout/topbar/HBoxContainer"]
custom_minimum_size = Vector2(35, 30)
layout_mode = 2
texture_normal = ExtResource("13_f8ulr")
ignore_texture_size = true
stretch_mode = 5

[node name="forward" type="TextureButton" parent="layout/topbar/HBoxContainer"]
custom_minimum_size = Vector2(35, 30)
layout_mode = 2
texture_normal = ExtResource("14_btxsc")
ignore_texture_size = true
stretch_mode = 5

[node name="refresh" type="TextureButton" parent="layout/topbar/HBoxContainer"]
custom_minimum_size = Vector2(35, 30)
layout_mode = 2
texture_normal = ExtResource("15_scxih")
ignore_texture_size = true
stretch_mode = 5

[node name="VSeparator" type="VSeparator" parent="layout/topbar/HBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 10
theme_override_styles/separator = SubResource("StyleBoxLine_aet8x")

[node name="search" type="TextureButton" parent="layout/topbar/HBoxContainer"]
custom_minimum_size = Vector2(35, 30)
layout_mode = 2
texture_normal = ExtResource("17_gm15y")
ignore_texture_size = true
stretch_mode = 5

[node name="tabs" type="TextureButton" parent="layout/topbar/HBoxContainer"]
custom_minimum_size = Vector2(35, 30)
layout_mode = 2
texture_normal = ExtResource("18_rf78i")
ignore_texture_size = true
stretch_mode = 5

[node name="VSeparator3" type="VSeparator" parent="layout/topbar/HBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 10
theme_override_styles/separator = SubResource("StyleBoxLine_aet8x")

[node name="info" type="TextureButton" parent="layout/topbar/HBoxContainer"]
custom_minimum_size = Vector2(35, 30)
layout_mode = 2
texture_normal = ExtResource("19_017ix")
ignore_texture_size = true
stretch_mode = 5

[node name="settings" type="TextureButton" parent="layout/topbar/HBoxContainer"]
custom_minimum_size = Vector2(35, 30)
layout_mode = 2
texture_normal = ExtResource("20_jb74c")
ignore_texture_size = true
stretch_mode = 5

[node name="VSeparator2" type="VSeparator" parent="layout/topbar/HBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_2rfkf")

[node name="minimize" type="TextureButton" parent="layout/topbar/HBoxContainer"]
custom_minimum_size = Vector2(35, 30)
layout_mode = 2
texture_normal = ExtResource("16_oat6h")
ignore_texture_size = true
stretch_mode = 5

[node name="maximize" type="TextureButton" parent="layout/topbar/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(35, 30)
layout_mode = 2
texture_normal = ExtResource("17_k77ib")
ignore_texture_size = true
stretch_mode = 5

[node name="close" type="TextureButton" parent="layout/topbar/HBoxContainer"]
custom_minimum_size = Vector2(35, 30)
layout_mode = 2
texture_normal = ExtResource("18_8jv3j")
ignore_texture_size = true
stretch_mode = 5

[node name="title" type="Label" parent="layout/topbar"]
layout_mode = 2
text = "BLAH! v1.0"
horizontal_alignment = 1

[node name="handles" type="Control" parent="."]
visible = false
z_index = -10
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("13_krsn5")

[node name="right" type="Control" parent="handles"]
custom_minimum_size = Vector2(5, 5)
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2
mouse_default_cursor_shape = 10

[node name="bottom" type="Control" parent="handles"]
custom_minimum_size = Vector2(5, 5)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
mouse_default_cursor_shape = 9

[node name="corner" type="Control" parent="handles"]
custom_minimum_size = Vector2(5, 5)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -5.0
offset_top = -5.0
grow_horizontal = 0
grow_vertical = 0
mouse_default_cursor_shape = 12

[node name="error" type="AcceptDialog" parent="."]
position = Vector2i(420, 190)
size = Vector2i(300, 200)

[connection signal="gui_input" from="Panel/VBox/TextureRect" to="." method="_on_TextureRect_gui_input"]
[connection signal="resized" from="Panel/VBox/TextureRect" to="." method="_on_texture_rect_resized"]
[connection signal="gui_input" from="layout/topbar" to="layout/topbar" method="_on_gui_input"]
[connection signal="pressed" from="layout/topbar/HBoxContainer/backward" to="layout/topbar" method="_on_backward_pressed"]
[connection signal="pressed" from="layout/topbar/HBoxContainer/forward" to="layout/topbar" method="_on_forward_pressed"]
[connection signal="pressed" from="layout/topbar/HBoxContainer/refresh" to="layout/topbar" method="_on_refresh_pressed"]
[connection signal="pressed" from="layout/topbar/HBoxContainer/search" to="layout/topbar" method="_on_search_pressed"]
[connection signal="pressed" from="layout/topbar/HBoxContainer/tabs" to="layout/topbar" method="_on_tabs_pressed"]
[connection signal="pressed" from="layout/topbar/HBoxContainer/info" to="layout/topbar" method="_on_info_pressed"]
[connection signal="pressed" from="layout/topbar/HBoxContainer/settings" to="layout/topbar" method="_on_settings_pressed"]
[connection signal="pressed" from="layout/topbar/HBoxContainer/minimize" to="layout/topbar" method="_on_minimize_pressed"]
[connection signal="pressed" from="layout/topbar/HBoxContainer/maximize" to="layout/topbar" method="_on_maximize_pressed"]
[connection signal="pressed" from="layout/topbar/HBoxContainer/close" to="layout/topbar" method="_on_close_pressed"]
[connection signal="gui_input" from="handles/right" to="handles" method="_on_right_gui_input"]
[connection signal="gui_input" from="handles/bottom" to="handles" method="_on_bottom_gui_input"]
[connection signal="gui_input" from="handles/corner" to="handles" method="_on_corner_gui_input"]
